Enable application insights

--- a/src/azsdkdemoapi/appsettings.json
+++ b/src/azsdkdemoapi/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Azure-Identity": "Information"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Azure-Identity": "Information"
+      }
     }
   },
   "AllowedHosts": "*"
