--- a/src/azsdkdemoapi/appsettings.json
+++ b/src/azsdkdemoapi/appsettings.json
@@ -1,4 +1,20 @@
 {
+  "AzureDefaults":{
+    "Retry": {
+      "MaxRetries": 10,
+      "Delay": "0:0:3"
+    },
+    "Diagnostics":
+    {
+      "IsLoggingEnabled": true
+    }
+  },
+  "AzureBlobStorage": {
+    "ServiceUri": ""
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
