--- a/src/azsdkdemoapi/appsettings.json
+++ b/src/azsdkdemoapi/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "AzureBlobStorage": {
-    "ServiceUri": ""
+    "ServiceUri": "https://azsdkdemo4storage.blob.core.windows.net/"
   },
   "ApplicationInsights": {
     "InstrumentationKey": ""
