Add direct controll and cleanup

--- a/src/azsdkdemoapi/.vscode/launch.json
+++ b/src/azsdkdemoapi/.vscode/launch.json
@@ -19,7 +19,7 @@
       },
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "AZUREBLOBSTORAGE__SERVICEURI": "https://azsdkdemo4storage.blob.core.windows.net/",
+        "AZUREBLOBSTORAGE__SERVICEURI": "",
         "APPINSIGHTS_INSTRUMENTATIONKEY": ""
       },
       "sourceFileMap": {
