--- a/src/azsdkdemoapi/appsettings.json
+++ b/src/azsdkdemoapi/appsettings.json
@@ -10,21 +10,20 @@
     }
   },
   "AzureBlobStorage": {
-    "ServiceUri": "https://azsdkdemo4storage.blob.core.windows.net/"
+    "ServiceUri": ""
   },
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Azure-Identity": "Information"
+      "Default": "Warning",
+      "Azure": "Trace"
     },
     "ApplicationInsights": {
       "LogLevel": {
-        "Azure-Identity": "Information"
+        "Default": "Warning",
+        "Azure": "Trace"
       }
     }
   },
