Add ARM template

--- a/src/azsdkdemoapi/appsettings.json
+++ b/src/azsdkdemoapi/appsettings.json
@@ -17,13 +17,12 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Azure": "Trace"
+      "Azure": "Information"
     },
     "ApplicationInsights": {
       "LogLevel": {
-        "Default": "Warning",
-        "Azure": "Trace"
+        "SimpleTracingPolicy": "Information",
+        "Azure": "Information"
       }
     }
   },
