Add docker-compose support

--- a/src/azsdkdemoprocessor/Dockerfile
+++ b/src/azsdkdemoprocessor/Dockerfile
@@ -1,4 +1,11 @@
+FROM maven AS build-env
+WORKDIR /usr/app/
+
+COPY src/azsdkdemoprocessor/ ./
+RUN mvn package -Dmaven.test.skip=true assembly:single
+
+# Build runtime image
 FROM java:8-jdk-alpine
-COPY ./target/processor-1.0-SNAPSHOT.jar /usr/app/
-WORKDIR /usr/app
-ENTRYPOINT ["java", "-jar", "processor-1.0-SNAPSHOT.jar"]
+WORKDIR /usr/app/
+COPY --from=build-env /usr/app/ .
+ENTRYPOINT ["java", "-jar", "target/processor-1.0-SNAPSHOT.jar"]
