--- a/src/azsdkdemoapi/Dockerfile
+++ b/src/azsdkdemoapi/Dockerfile
@@ -3,11 +3,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
-COPY src/azsdkdemoapi/*.csproj ./
+COPY *.csproj ./
 RUN dotnet restore
 
 # Copy everything else and build
-COPY src/azsdkdemoapi/ ./
+COPY . ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
