--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -10,10 +10,15 @@ RUN dotnet restore
 COPY . ./
 RUN dotnet publish -c Release -o out
 
-# Build runtime image
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+RUN apt-get update -y && \
+    apt-get install python3 python3-distutils python3-pip -y && \
+    pip3 install --user azure-cli
+ENV PATH /root/.local/bin/:$PATH
+
 WORKDIR /app
+
 ENV ASPNETCORE_URLS http://+:80
 EXPOSE 80
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "azsdkdemoapi.dll"]
+ENTRYPOINT ["dotnet", "Api.dll"] 
