--- a/src/api/.vscode/launch.json
+++ b/src/api/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/azsdkdemoapi.dll",
+      "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Api.dll",
       "args": [],
       "cwd": "${workspaceFolder}",
       "stopAtEntry": false,
