--- a/src/net/ConsoleApp/ConsoleApp.csproj
+++ b/src/net/ConsoleApp/ConsoleApp.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.2.0-preview.4"/>
+    <PackageReference Include="DotNetEnv" Version="1.4.0"/>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.5.0-preview.4"/>
+  </ItemGroup>
 </Project>
