--- a/src/python/docker-compose.yml
+++ b/src/python/docker-compose.yml
@@ -1,11 +1,13 @@
 # Please refer https://aka.ms/HTTPSinContainer on how to setup an https developer certificate for your ASP .NET Core service.
+
+# NOTE: The python version will use the .NET Api and WebApp projects until the python versions are done.
 version: "3.8"
 
 services:
   azsdkdemonetwebapp:
     image: azsdkdemonetwebapp
     build:
-      context: .
+      context: ../net
       dockerfile: WebApp/Dockerfile
     depends_on:
       - azsdkdemonetapi
@@ -18,16 +20,16 @@ services:
     volumes: 
         - "${HOME}/.azure:/root/.azure"
     build:
-      context: .
+      context: ../net
       dockerfile: Api/Dockerfile
     ports:
       - 2080:80
       - 2443:443
-  azsdkdemonetqueueservice:
-    image: azsdkdemonetqueueservice
+  azsdkdemopythonqueueservice:
+    image: azsdkdemopythonqueueservice
     env_file: ../../.env
-    volumes: 
-        - "${HOME}/.azure:/root/.azure"
+    volumes:
+      - ${HOME}/.azure:/root/.azure
     build:
       context: .
-      dockerfile: Services/QueueService/Dockerfile
+      dockerfile: services/queue-service/Dockerfile
