--- a/src/python/services/queue-service/Dockerfile
+++ b/src/python/services/queue-service/Dockerfile
@@ -22,4 +22,4 @@ ADD services/queue-service/. /app
 #USER appuser
 
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
-CMD ["python", "queue_service.py"]
+CMD ["python", "app.py"]
