--- a/src/net/Api/Api.csproj
+++ b/src/net/Api/Api.csproj
@@ -1,10 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Lib\Lib.csproj" />
+    <ProjectReference Include="..\Lib\Lib.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="1.4.0"/>
+    <PackageReference Include="System.Linq.Async" Version="4.1.1"/>
   </ItemGroup>
 </Project>
