--- a/pac/k8s/net/azsdkdemonetwebapp-deployment.yaml
+++ b/pac/k8s/net/azsdkdemonetwebapp-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         io.kompose.service: azsdkdemonetwebapp
     spec:
       containers:
-        image: vyta/azsdkdemonetwebapp
+        image: azsdkdemonetwebapp
         imagePullPolicy: "IfNotPresent"
         name: azsdkdemonetwebapp
         ports:
