Enable local deployment (#10)
* Adding docs for kind deployment

* Remove 'vyta' and add notes on loading local images

* Moving to pac

* yaml fix

* Adding baremetal nginx deployment with fixed nodeport

* Removing kind docs

* Removing webhook

* Updating configmap

* Rename the configmap file

Co-authored-by: Jon Gallant <jon@jongallant.com>

--- a/pac/k8s/net/azsdkdemonetwebapp-deployment.yaml
+++ b/pac/k8s/net/azsdkdemonetwebapp-deployment.yaml
@@ -27,13 +27,21 @@ spec:
     spec:
       containers:
       - image: azsdkdemonetwebapp
-        imagePullPolicy: "Never"
+        imagePullPolicy: "IfNotPresent"
         name: azsdkdemonetwebapp
         ports:
         - containerPort: 80
         - containerPort: 443
         resources: {}
+        volumeMounts:
+        - name: web-config
+          mountPath: /var/www/web/appsettings.json
+          readOnly: true
+          subPath: appsettings.json
       restartPolicy: Always
       serviceAccountName: ""
-      volumes: null
+      volumes:
+        - name: web-config
+          configMap:
+            name: websettings
 status: {}
