--- a/pac/k8s/net/azsdkdemonetapi-service.yaml
+++ b/pac/k8s/net/azsdkdemonetapi-service.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert --file ./src/net/docker-compose.yml -o ./pac/k8s/net
-      --volumes hostPath
+    kompose.cmd: kompose convert -o ../../pac/k8s/net --volumes hostPath
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
