--- a/pac/net/k8s/azsdkdemonetapi-deployment.yaml
+++ b/pac/net/k8s/azsdkdemonetapi-deployment.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert --file ./src/net/docker-compose.yml -o ./pac/k8s/net
+    kompose.cmd:
+      kompose convert --file ./src/net/docker-compose.yml -o ./pac/k8s/net
       --volumes hostPath
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
@@ -19,7 +20,8 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert --file ./src/net/docker-compose.yml -o ./pac/k8s/net
+        kompose.cmd:
+          kompose convert --file ./src/net/docker-compose.yml -o ./pac/k8s/net
           --volumes hostPath
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
@@ -27,106 +29,92 @@ spec:
         io.kompose.service: azsdkdemonetapi
     spec:
       containers:
-      - env:
-        - name: AZURE_CLIENT_ID
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_CLIENT_ID
-              name: env
-        - name: AZURE_CLIENT_SECRET
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_CLIENT_SECRET
-              name: env
-        - name: AZURE_COSMOS_CONTAINER
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_COSMOS_CONTAINER
-              name: env
-        - name: AZURE_COSMOS_DB
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_COSMOS_DB
-              name: env
-        - name: AZURE_COSMOS_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_COSMOS_ENDPOINT
-              name: env
-        - name: AZURE_COSMOS_KEY_NAME
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_COSMOS_KEY_NAME
-              name: env
-        - name: AZURE_FORM_RECOGNIZER_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_FORM_RECOGNIZER_ENDPOINT
-              name: env
-        - name: AZURE_KEYVAULT_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_KEYVAULT_ENDPOINT
-              name: env
-        - name: AZURE_STORAGE_BLOB_CONTAINER_NAME
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_STORAGE_BLOB_CONTAINER_NAME
-              name: env
-        - name: AZURE_STORAGE_BLOB_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_STORAGE_BLOB_ENDPOINT
-              name: env
-        - name: AZURE_STORAGE_QUEUE_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_STORAGE_QUEUE_ENDPOINT
-              name: env
-        - name: AZURE_STORAGE_QUEUE_MSG_COUNT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_STORAGE_QUEUE_MSG_COUNT
-              name: env
-        - name: AZURE_STORAGE_QUEUE_NAME
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_STORAGE_QUEUE_NAME
-              name: env
-        - name: AZURE_STORAGE_QUEUE_RECEIVE_SLEEP
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_STORAGE_QUEUE_RECEIVE_SLEEP
-              name: env
-        - name: AZURE_TENANT_ID
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_TENANT_ID
-              name: env
-        - name: AZURE_TEXT_ANALYTICS_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: AZURE_TEXT_ANALYTICS_ENDPOINT
-              name: env
-        - name: MEME_ENDPOINT
-          valueFrom:
-            configMapKeyRef:
-              key: MEME_ENDPOINT
-              name: env
-        image: azsdkdemonetapi
-        imagePullPolicy: "IfNotPresent"
-        name: azsdkdemonetapi
-        ports:
-        - containerPort: 80
-        - containerPort: 443
-        resources: {}
-        volumeMounts:
-        - mountPath: /root/.azure
-          name: azsdkdemonetapi-hostpath0
+        - env:
+            - name: AZURE_COSMOS_CONTAINER
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_COSMOS_CONTAINER
+                  name: env
+            - name: AZURE_COSMOS_DB
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_COSMOS_DB
+                  name: env
+            - name: AZURE_COSMOS_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_COSMOS_ENDPOINT
+                  name: env
+            - name: AZURE_COSMOS_KEY_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_COSMOS_KEY_NAME
+                  name: env
+            - name: AZURE_FORM_RECOGNIZER_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_FORM_RECOGNIZER_ENDPOINT
+                  name: env
+            - name: AZURE_KEYVAULT_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_KEYVAULT_ENDPOINT
+                  name: env
+            - name: AZURE_STORAGE_BLOB_CONTAINER_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_BLOB_CONTAINER_NAME
+                  name: env
+            - name: AZURE_STORAGE_BLOB_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_BLOB_ENDPOINT
+                  name: env
+            - name: AZURE_STORAGE_QUEUE_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_QUEUE_ENDPOINT
+                  name: env
+            - name: AZURE_STORAGE_QUEUE_MSG_COUNT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_QUEUE_MSG_COUNT
+                  name: env
+            - name: AZURE_STORAGE_QUEUE_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_QUEUE_NAME
+                  name: env
+            - name: AZURE_STORAGE_QUEUE_RECEIVE_SLEEP
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_QUEUE_RECEIVE_SLEEP
+                  name: env
+            - name: AZURE_TEXT_ANALYTICS_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_TEXT_ANALYTICS_ENDPOINT
+                  name: env
+            - name: MEME_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: MEME_ENDPOINT
+                  name: env
+          image: azsdkdemonetapi
+          imagePullPolicy: "IfNotPresent"
+          name: azsdkdemonetapi
+          ports:
+            - containerPort: 80
+            - containerPort: 443
+          resources: {}
+          volumeMounts:
+            - mountPath: /root/.azure
+              name: azsdkdemonetapi-hostpath0
       restartPolicy: Always
       serviceAccountName: ""
       volumes:
-      - hostPath:
-          path: /home/jon/.azure
-        name: azsdkdemonetapi-hostpath0
+        - hostPath:
+            path: /run/desktop/mnt/host/wsl/.azure
+            type: Directory
+          name: azsdkdemonetapi-hostpath0
 status: {}
