--- a/pac/net/k8s/local/azsdkdemonetapi-deployment.yaml
+++ b/pac/net/k8s/local/azsdkdemonetapi-deployment.yaml
@@ -8,13 +8,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: azsdkdemonetqueueservice
-  name: azsdkdemonetqueueservice
+    io.kompose.service: azsdkdemonetapi
+  name: azsdkdemonetapi
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: azsdkdemonetqueueservice
+      io.kompose.service: azsdkdemonetapi
   strategy:
     type: Recreate
   template:
@@ -26,7 +26,7 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: azsdkdemonetqueueservice
+        io.kompose.service: azsdkdemonetapi
     spec:
       containers:
         - env:
@@ -100,18 +100,21 @@ spec:
                 configMapKeyRef:
                   key: MEME_ENDPOINT
                   name: env
-          image: azsdkdemonetqueueservice
+          image: jongio/azsdkdemonetapi
           imagePullPolicy: "IfNotPresent"
-          name: azsdkdemonetqueueservice
+          name: azsdkdemonetapi
+          ports:
+            - containerPort: 80
+            - containerPort: 443
           resources: {}
           volumeMounts:
             - mountPath: /root/.azure
-              name: azsdkdemonetqueueservice-hostpath0
+              name: azsdkdemonetapi-hostpath0
       restartPolicy: Always
       serviceAccountName: ""
       volumes:
         - hostPath:
             path: /run/desktop/mnt/host/wsl/.azure
             type: Directory
-          name: azsdkdemonetqueueservice-hostpath0
+          name: azsdkdemonetapi-hostpath0
 status: {}
