--- a/pac/net/k8s/local/azsdkdemonetqueueservice-deployment.yaml
+++ b/pac/net/k8s/local/azsdkdemonetqueueservice-deployment.yaml
@@ -8,13 +8,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: azsdkdemonetapi
-  name: azsdkdemonetapi
+    io.kompose.service: azsdkdemonetqueueservice
+  name: azsdkdemonetqueueservice
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: azsdkdemonetapi
+      io.kompose.service: azsdkdemonetqueueservice
   strategy:
     type: Recreate
   template:
@@ -26,7 +26,7 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: azsdkdemonetapi
+        io.kompose.service: azsdkdemonetqueueservice
     spec:
       containers:
         - env:
@@ -100,21 +100,18 @@ spec:
                 configMapKeyRef:
                   key: MEME_ENDPOINT
                   name: env
-          image: azsdkdemonetapi
+          image: jongio/azsdkdemonetqueueservice
           imagePullPolicy: "IfNotPresent"
-          name: azsdkdemonetapi
-          ports:
-            - containerPort: 80
-            - containerPort: 443
+          name: azsdkdemonetqueueservice
           resources: {}
           volumeMounts:
             - mountPath: /root/.azure
-              name: azsdkdemonetapi-hostpath0
+              name: azsdkdemonetqueueservice-hostpath0
       restartPolicy: Always
       serviceAccountName: ""
       volumes:
         - hostPath:
             path: /run/desktop/mnt/host/wsl/.azure
             type: Directory
-          name: azsdkdemonetapi-hostpath0
+          name: azsdkdemonetqueueservice-hostpath0
 status: {}
