Fix up some terraform issues

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # TERRAFORM OUTPUTS
 
-AZURE_COSMOS_ENDPOINT=https://azsdkdemo100cosmosaccount.documents.azure.com:443/
-AZURE_FORM_RECOGNIZER_ENDPOINT=https://azsdkdemo100formrecognizer.cognitiveservices.azure.com/
-AZURE_KEYVAULT_ENDPOINT=https://azsdkdemo100keyvault.vault.azure.net/
-AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemo100storage.blob.core.windows.net/
-AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemo100storage.queue.core.windows.net/
-AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemo100textanalytics.cognitiveservices.azure.com/
+AZURE_COSMOS_ENDPOINT=https://azsdkdemoauthcosmosaccount.documents.azure.com:443/
+AZURE_FORM_RECOGNIZER_ENDPOINT=https://azsdkdemoauthformrecognizer.cognitiveservices.azure.com/
+AZURE_KEYVAULT_ENDPOINT=https://azsdkdemoauthkeyvault.vault.azure.net/
+AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemoauthstorage.blob.core.windows.net/
+AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemoauthstorage.queue.core.windows.net/
+AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemoauthtextanalytics.cognitiveservices.azure.com/
 
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
