--- a/src/net/Services/QueueService/QueueService.csproj
+++ b/src/net/Services/QueueService/QueueService.csproj
@@ -5,12 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.AI.FormRecognizer" Version="1.0.0-preview.3" />
-    <PackageReference Include="Azure.AI.TextAnalytics" Version="1.0.0" />
+    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.0.0-preview.1" />
+    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0" />
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3" />
-    <PackageReference Include="Azure.Identity" Version="1.2.0-preview.4" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.5.0-preview.1" />
-    <PackageReference Include="Azure.Storage.Queues" Version="12.4.0-preview.1" />
+    <PackageReference Include="Azure.Identity" Version="1.2.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.5.0" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.4.0" />
     <PackageReference Include="DotNetEnv" Version="1.4.0" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
