Add table support

--- a/.env
+++ b/.env
@@ -5,15 +5,22 @@ AZURE_FORM_RECOGNIZER_ENDPOINT=https://azsdkdemoauthformrecognizer.cognitiveserv
 AZURE_KEYVAULT_ENDPOINT=https://azsdkdemoauthkeyvault.vault.azure.net/
 AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemoauthstorage.blob.core.windows.net/
 AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemoauthstorage.queue.core.windows.net/
+AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemoauthstorage.table.core.windows.net/
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemoauthtextanalytics.cognitiveservices.azure.com/
+AZURE_STORAGE_ACCOUNT_NAME=azsdkdemoauthstorage
 
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
 AZURE_STORAGE_QUEUE_RECEIVE_SLEEP=1
+AZURE_STORAGE_TABLE_NAME=images
 AZURE_COSMOS_DB=azimageai
 AZURE_COSMOS_CONTAINER=images
 AZURE_COSMOS_KEY_NAME =cosmoskey
+AZURE_STORAGE_TYPE=COSMOS_SQL
+#AZURE_STORAGE_TYPE=STORAGE_TABLE
+AZURE_STORAGE_KEY_NAME=storagekey
+
 
 # COSMO EMULATOR
 #AZURE_COSMOS_ENDPOINT=https://localhost:8081/
