--- a/pac/net/k8s/aks/azsdkdemonetqueueservice-deployment.yaml
+++ b/pac/net/k8s/aks/azsdkdemonetqueueservice-deployment.yaml
@@ -126,7 +126,7 @@ spec:
                   key: AZURE_STORAGE_ACCOUNT_NAME
                   name: env
           image: jongio/azsdkdemonetqueueservice
-          imagePullPolicy: "IfNotPresent"
+          imagePullPolicy: "Always"
           name: azsdkdemonetqueueservice
           resources: {}
       restartPolicy: Always
