--- a/pac/net/k8s/aks/azsdkdemonetwebapp-deployment.yaml
+++ b/pac/net/k8s/aks/azsdkdemonetwebapp-deployment.yaml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - image: jongio/azsdkdemonetwebapp
-        imagePullPolicy: "IfNotPresent"
+        imagePullPolicy: "Always"
         name: azsdkdemonetwebapp
         ports:
         - containerPort: 80
