--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # TERRAFORM OUTPUTS
 
-AZURE_COSMOS_ENDPOINT=https://azsdkdemoauthcosmosaccount.documents.azure.com:443/
-AZURE_FORM_RECOGNIZER_ENDPOINT=https://azsdkdemoauthformrecognizer.cognitiveservices.azure.com/
-AZURE_KEYVAULT_ENDPOINT=https://azsdkdemoauthkeyvault.vault.azure.net/
-AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemoauthstorage.blob.core.windows.net/
-AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemoauthstorage.queue.core.windows.net/
-AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemoauthstorage.table.core.windows.net/
-AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemoauthtextanalytics.cognitiveservices.azure.com/
-AZURE_STORAGE_ACCOUNT_NAME=azsdkdemoauthstorage
+AZURE_COSMOS_ENDPOINT=https://azsdkdemojongdevcosmosaccount.documents.azure.com:443/
+AZURE_FORM_RECOGNIZER_ENDPOINT=https://azsdkdemojongdevformrecognizer.cognitiveservices.azure.com/
+AZURE_KEYVAULT_ENDPOINT=https://azsdkdemojongdevkeyvault.vault.azure.net/
+AZURE_STORAGE_ACCOUNT_NAME=azsdkdemojongdevstorage
+AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemojongdevstorage.blob.core.windows.net/
+AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemojongdevstorage.queue.core.windows.net/
+AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemojongdevstorage.table.core.windows.net/
+AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemojongdevtextanalytics.cognitiveservices.azure.com/
 
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
