--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemojongdevstorage.blob.core.windows.ne
 AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemojongdevstorage.queue.core.windows.net/
 AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemojongdevstorage.table.core.windows.net/
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemojongdevtextanalytics.cognitiveservices.azure.com/
+AZURE_APP_CONFIG_ENDPOINT = https://azsdkdemojongdevappconfig.azconfig.io
 
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
