--- a/pac/net/k8s/aks/ingress.yaml
+++ b/pac/net/k8s/aks/ingress.yaml
@@ -20,6 +20,10 @@ spec:
         backend:
           serviceName: azsdkdemonetapi
           servicePort: 2080
+      - path: /config
+        backend:
+          serviceName: azsdkdemonetapi
+          servicePort: 2080
       - path: /imagehub
         backend:
           serviceName: azsdkdemonetapi
