--- a/pac/net/k8s/local/azsdkdemonetapi-deployment.yaml
+++ b/pac/net/k8s/local/azsdkdemonetapi-deployment.yaml
@@ -125,6 +125,11 @@ spec:
                 configMapKeyRef:
                   key: AZURE_STORAGE_ACCOUNT_NAME
                   name: env
+            - name: AZURE_APP_CONFIG_ENDPOINT
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_APP_CONFIG_ENDPOINT
+                  name: env
           image: jongio/azsdkdemonetapi
           imagePullPolicy: "IfNotPresent"
           name: azsdkdemonetapi
