--- a/pac/net/k8s/local/env-configmap.yaml
+++ b/pac/net/k8s/local/env-configmap.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 data:
-  AZURE_COSMOS_ENDPOINT: https://azsdkdemoauthcosmosaccount.documents.azure.com:443/
-  AZURE_FORM_RECOGNIZER_ENDPOINT: https://azsdkdemoauthformrecognizer.cognitiveservices.azure.com/
-  AZURE_KEYVAULT_ENDPOINT: https://azsdkdemoauthkeyvault.vault.azure.net/
-  AZURE_STORAGE_BLOB_ENDPOINT: https://azsdkdemoauthstorage.blob.core.windows.net/
-  AZURE_STORAGE_QUEUE_ENDPOINT: https://azsdkdemoauthstorage.queue.core.windows.net/
-  AZURE_TEXT_ANALYTICS_ENDPOINT: https://azsdkdemoauthtextanalytics.cognitiveservices.azure.com/
-  AZURE_STORAGE_TABLE_ENDPOINT: https://azsdkdemoauthstorage.table.core.windows.net/
+  AZURE_COSMOS_ENDPOINT: https://azsdkdemojongdevcosmosaccount.documents.azure.com:443/
+  AZURE_FORM_RECOGNIZER_ENDPOINT: https://azsdkdemojongdevformrecognizer.cognitiveservices.azure.com/
+  AZURE_KEYVAULT_ENDPOINT: https://azsdkdemojongdevkeyvault.vault.azure.net/
+  AZURE_STORAGE_BLOB_ENDPOINT: https://azsdkdemojongdevstorage.blob.core.windows.net/
+  AZURE_STORAGE_QUEUE_ENDPOINT: https://azsdkdemojongdevstorage.queue.core.windows.net/
+  AZURE_TEXT_ANALYTICS_ENDPOINT: https://azsdkdemojongdevtextanalytics.cognitiveservices.azure.com/
+  AZURE_STORAGE_TABLE_ENDPOINT: https://azsdkdemojongdevstorage.table.core.windows.net/
+  AZURE_APP_CONFIG_ENDPOINT: https://azsdkdemojongdevappconfig.azconfig.io
   AZURE_COSMOS_CONTAINER: images
   AZURE_COSMOS_DB: azimageai
   AZURE_COSMOS_KEY_NAME: cosmoskey
@@ -15,7 +16,7 @@ data:
   AZURE_STORAGE_QUEUE_NAME: messages
   AZURE_STORAGE_QUEUE_RECEIVE_SLEEP: "1"
   MEME_ENDPOINT: https://meme-api.herokuapp.com/gimme/wholesomememes
-  AZURE_STORAGE_ACCOUNT_NAME: azsdkdemoauthstorage
+  AZURE_STORAGE_ACCOUNT_NAME: azsdkdemojongdevstorage
   AZURE_STORAGE_TYPE: COSMOS_SQL
   AZURE_STORAGE_KEY_NAME: storagekey
   AZURE_STORAGE_TABLE_NAME: images
