Init func code.

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ AZURE_STORAGE_BLOB_ENDPOINT=https://azsdkdemojongdevstorage.blob.core.windows.ne
 AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemojongdevstorage.queue.core.windows.net/
 AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemojongdevstorage.table.core.windows.net/
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemojongdevtextanalytics.cognitiveservices.azure.com/
-AZURE_APP_CONFIG_ENDPOINT = https://azsdkdemojongdevappconfig.azconfig.io
+AZURE_APP_CONFIG_ENDPOINT=https://azsdkdemojongdevappconfig.azconfig.io
 
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
@@ -16,11 +16,15 @@ AZURE_STORAGE_QUEUE_MSG_COUNT=10
 AZURE_STORAGE_QUEUE_RECEIVE_SLEEP=1
 AZURE_STORAGE_TABLE_NAME=images
 AZURE_COSMOS_DB=azimageai
-AZURE_COSMOS_CONTAINER=images
-AZURE_COSMOS_KEY_NAME =cosmoskey
+AZURE_COSMOS_COLLECTION=images
+AZURE_COSMOS_KEY_SECRET_NAME=cosmoskey
 AZURE_STORAGE_TYPE=COSMOS_SQL
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
-AZURE_STORAGE_KEY_NAME=storagekey
+AZURE_STORAGE_KEY_SECRET_NAME=storagekey
+AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME=sync
+AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME=signalrconnectionstring
+AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME=storageconnectionstring
+
 
 
 # COSMO EMULATOR
