--- a/pac/net/k8s/aks/env-configmap.yaml
+++ b/pac/net/k8s/aks/env-configmap.yaml
@@ -8,9 +8,9 @@ data:
   AZURE_TEXT_ANALYTICS_ENDPOINT: https://azsdkdemoauthtextanalytics.cognitiveservices.azure.com/
   AZURE_STORAGE_TABLE_ENDPOINT: https://azsdkdemoauthstorage.table.core.windows.net/
   AZURE_APP_CONFIG_ENDPOINT: https://azsdkdemoauthappconfig.azconfig.io
-  AZURE_COSMOS_CONTAINER: images
+  AZURE_COSMOS_COLLECTION: images
   AZURE_COSMOS_DB: azimageai
-  AZURE_COSMOS_KEY_NAME: cosmoskey
+  AZURE_COSMOS_KEY_SECRET_NAME: cosmoskey
   AZURE_STORAGE_BLOB_CONTAINER_NAME: blobs
   AZURE_STORAGE_QUEUE_MSG_COUNT: "10"
   AZURE_STORAGE_QUEUE_NAME: messages
@@ -18,7 +18,7 @@ data:
   MEME_ENDPOINT: https://meme-api.herokuapp.com/gimme/wholesomememes
   AZURE_STORAGE_ACCOUNT_NAME: azsdkdemoauthstorage
   AZURE_STORAGE_TYPE: COSMOS_SQL
-  AZURE_STORAGE_KEY_NAME: storagekey
+  AZURE_STORAGE_KEY_SECRET_NAME: storagekey
   AZURE_STORAGE_TABLE_NAME: images
 kind: ConfigMap
 metadata:
