--- a/src/net/WebApp/wwwroot/appsettings.Development.json
+++ b/src/net/WebApp/wwwroot/appsettings.Development.json
@@ -1,3 +1,4 @@
 {
-    "API_ENDPOINT": "http://localhost:2080"
+    "API_ENDPOINT": "http://localhost:2080",
+    "FUNCTIONS_ENDPOINT": "http://localhost:3080"
 }
