--- a/pac/net/k8s/aks/azsdkdemonetapi-deployment.yaml
+++ b/pac/net/k8s/aks/azsdkdemonetapi-deployment.yaml
@@ -30,10 +30,10 @@ spec:
     spec:
       containers:
         - env:
-            - name: AZURE_COSMOS_CONTAINER
+            - name: AZURE_COSMOS_COLLECTION
               valueFrom:
                 configMapKeyRef:
-                  key: AZURE_COSMOS_CONTAINER
+                  key: AZURE_COSMOS_COLLECTION
                   name: env
             - name: AZURE_COSMOS_DB
               valueFrom:
@@ -45,10 +45,10 @@ spec:
                 configMapKeyRef:
                   key: AZURE_COSMOS_ENDPOINT
                   name: env
-            - name: AZURE_COSMOS_KEY_NAME
+            - name: AZURE_COSMOS_KEY_SECRET_NAME
               valueFrom:
                 configMapKeyRef:
-                  key: AZURE_COSMOS_KEY_NAME
+                  key: AZURE_COSMOS_KEY_SECRET_NAME
                   name: env
             - name: AZURE_FORM_RECOGNIZER_ENDPOINT
               valueFrom:
@@ -105,10 +105,10 @@ spec:
                 configMapKeyRef:
                   key: AZURE_STORAGE_TYPE
                   name: env
-            - name: AZURE_STORAGE_KEY_NAME
+            - name: AZURE_STORAGE_KEY_SECRET_NAME
               valueFrom:
                 configMapKeyRef:
-                  key: AZURE_STORAGE_KEY_NAME
+                  key: AZURE_STORAGE_KEY_SECRET_NAME
                   name: env
             - name: AZURE_STORAGE_TABLE_NAME
               valueFrom:
