Add start files, refactoring

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemojongdevstorage.queue.core.windows.
 AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemojongdevstorage.table.core.windows.net/
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemojongdevtextanalytics.cognitiveservices.azure.com/
 AZURE_APP_CONFIG_ENDPOINT=https://azsdkdemojongdevappconfig.azconfig.io
-
+CONTAINER_REGISTRY_NAME=jongio
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
