Add local k8s support, improve ACR

--- a/pac/net/k8s/aks/env-configmap.yaml
+++ b/pac/net/k8s/aks/env-configmap.yaml
@@ -10,7 +10,7 @@ data:
   AZURE_APP_CONFIG_ENDPOINT: https://azsdkdemoauthappconfig.azconfig.io
   AZURE_COSMOS_COLLECTION: images
   AZURE_COSMOS_DB: azimageai
-  AZURE_COSMOS_KEY_SECRET_NAME: cosmoskey
+  AZURE_COSMOS_KEY_SECRET_NAME: CosmosKey
   AZURE_STORAGE_BLOB_CONTAINER_NAME: blobs
   AZURE_STORAGE_QUEUE_MSG_COUNT: "10"
   AZURE_STORAGE_QUEUE_NAME: messages
@@ -18,7 +18,7 @@ data:
   MEME_ENDPOINT: https://meme-api.herokuapp.com/gimme/wholesomememes
   AZURE_STORAGE_ACCOUNT_NAME: azsdkdemoauthstorage
   AZURE_STORAGE_TYPE: COSMOS_SQL
-  AZURE_STORAGE_KEY_SECRET_NAME: storagekey
+  AZURE_STORAGE_KEY_SECRET_NAME: StorageKey
   AZURE_STORAGE_TABLE_NAME: images
 kind: ConfigMap
 metadata:
