--- a/.env
+++ b/.env
@@ -9,7 +9,9 @@ AZURE_STORAGE_QUEUE_ENDPOINT=https://azsdkdemojongdevstorage.queue.core.windows.
 AZURE_STORAGE_TABLE_ENDPOINT=https://azsdkdemojongdevstorage.table.core.windows.net/
 AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemojongdevtextanalytics.cognitiveservices.azure.com/
 AZURE_APP_CONFIG_ENDPOINT=https://azsdkdemojongdevappconfig.azconfig.io
-CONTAINER_REGISTRY_NAME=jongio
+AZURE_CONTAINER_REGISTRY_SERVER=azsdkdemojongdevacr.azurecr.io
+CONTAINER_TAG=1.0.0
+FUNCTIONS_ENDPOINT=http://azsdkdemojongdevfunction.azurewebsites.net
 AZURE_STORAGE_BLOB_CONTAINER_NAME=blobs
 AZURE_STORAGE_QUEUE_NAME=messages
 AZURE_STORAGE_QUEUE_MSG_COUNT=10
@@ -17,13 +19,13 @@ AZURE_STORAGE_QUEUE_RECEIVE_SLEEP=1
 AZURE_STORAGE_TABLE_NAME=images
 AZURE_COSMOS_DB=azimageai
 AZURE_COSMOS_COLLECTION=images
-AZURE_COSMOS_KEY_SECRET_NAME=cosmoskey
+AZURE_COSMOS_KEY_SECRET_NAME=CosmosKey
 AZURE_STORAGE_TYPE=COSMOS_SQL
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
-AZURE_STORAGE_KEY_SECRET_NAME=storagekey
+AZURE_STORAGE_KEY_SECRET_NAME=StorageKey
 AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME=sync
-AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME=signalrconnectionstring
-AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME=storageconnectionstring
+AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME=SignalRConnectionString
+AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME=StorageConnectionString
 
 
 
