--- a/pac/net/k8s/local/azsdkdemonetqueueservice-deployment.yaml
+++ b/pac/net/k8s/local/azsdkdemonetqueueservice-deployment.yaml
@@ -130,7 +130,22 @@ spec:
                 configMapKeyRef:
                   key: AZURE_APP_CONFIG_ENDPOINT
                   name: env
-          image: jongio/azsdkdemonetqueueservice
+            - name: AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_CLIENT_SYNC_QUEUE_NAME
+                  name: env
+            - name: AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_SIGNALR_CONNECTION_STRING_SECRET_NAME
+                  name: env
+            - name: AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME
+              valueFrom:
+                configMapKeyRef:
+                  key: AZURE_STORAGE_CONNECTION_STRING_SECRET_NAME
+                  name: env
+          image: azsdkdemojongdevacr.azurecr.io/azsdkdemonetqueueservice:1.0.0
           imagePullPolicy: "IfNotPresent"
           name: azsdkdemonetqueueservice
           resources: {}
