--- a/pac/net/k8s/local/web-configmap.yaml
+++ b/pac/net/k8s/local/web-configmap.yaml
@@ -5,5 +5,6 @@ apiVersion: v1
 data:
   appsettings.json: |-
     {
-        "API_ENDPOINT": "http://localhost:31389"
+        "API_ENDPOINT": "http://localhost:31389",
+        "FUNCTIONS_ENDPOINT": "http://localhost:3080"
     }
