--- a/pac/net/k8s/aks/azsdkdemonetwebapp-deployment.yaml
+++ b/pac/net/k8s/aks/azsdkdemonetwebapp-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         io.kompose.service: azsdkdemonetwebapp
     spec:
       containers:
-      - image: jongio/azsdkdemonetwebapp
+      - image: azsdkdemoauthacr.azurecr.io/azsdkdemonetwebapp:1.0.0
         imagePullPolicy: "Always"
         name: azsdkdemonetwebapp
         ports:
