--- a/pac/net/k8s/aks/web-configmap.yaml
+++ b/pac/net/k8s/aks/web-configmap.yaml
@@ -5,5 +5,6 @@ apiVersion: v1
 data:
   appsettings.json: |-
     {
-        "API_ENDPOINT": "http://13.77.151.132"
+        "API_ENDPOINT": "http://13.77.151.132",
+        "FUNCTIONS_ENDPOINT": "https://azsdkdemoauthfunction.azurewebsites.net"
     }
