testing gh action

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemojongdevtextanalytics.cognitiveser
 AZURE_APP_CONFIG_ENDPOINT=https://azsdkdemojongdevappconfig.azconfig.io
 AZURE_CONTAINER_REGISTRY_SERVER=azsdkdemojongdevacr.azurecr.io
 CONTAINER_TAG=1.0.0
+BRANCH=funcsignalr
 K8S_CONTEXT=docker-desktop
 API_ENDPOINT=http://localhost:31389
 FUNCTIONS_ENDPOINT=http://azsdkdemojongdevfunction.azurewebsites.net
