--- a/.env.prod
+++ b/.env.prod
@@ -10,6 +10,7 @@ AZURE_TEXT_ANALYTICS_ENDPOINT=https://azsdkdemoauthtextanalytics.cognitiveservic
 AZURE_APP_CONFIG_ENDPOINT=https://azsdkdemoauthappconfig.azconfig.io
 AZURE_CONTAINER_REGISTRY_SERVER=azsdkdemoauthacr.azurecr.io
 CONTAINER_TAG=1.0.0
+BRANCH=funcsignalr
 K8S_CONTEXT=azsdkdemoauthaks
 API_ENDPOINT=http://13.77.151.132
 FUNCTIONS_ENDPOINT=http://azsdkdemoauthfunction.azurewebsites.net
